# workshop_awra_gwtc_2026

./: .gitignore  AWRA_GEE_Landcover.js  AWRA_GEE_Sentinel.txt  README.md  main.py  metrics.py  ml_workshop.ipynb  pyproject.toml  train_on_one.csv  train_on_two.csv  visualization.py
