[project]
name = "post-event-flood-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.7.0",
    "ipykernel>=7.2.0",
    "pyarrow>=24.0.0",
    "pycaret[analysis,models]>=3.3.2",
    "rasterio>=1.4.4",
]
